--- a/website/newsletter/153/index.mdx
+++ b/website/newsletter/153/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /153
-title: "This Week In React #153: Server Components, Astro, MUI, Next.js, Remix, React-Query, Storybook, Vaul, Solito, Yoga, Reanimated, React-Tweet, Expo-Router, Lottie, Bun, TypeScript..."
+title: "This Week In React #153: Server Components, Astro, MUI, Next.js, Remix, React-Query, AsyncLocalStorage, forwardRef, Storybook, Vaul, Solito, Yoga, Reanimated, React-Tweet, Expo-Router, Lottie, Bun, TypeScript..."
 authors: [slorber]
 date: 07-25-2023
-unlisted: true
 ---
 
 Hi everyone!
